rusqlite/libsqlite3-sys/src/bindgen.rs

    pub fn sqlite3_create_function16(db: *mut sqlite3,
                                     zFunctionName:
                                         *const ::std::os::raw::c_void,
                                     nArg: ::std::os::raw::c_int,
                                     eTextRep: ::std::os::raw::c_int,
                                     pApp: *mut ::std::os::raw::c_void,
                                     xFunc:
                                         ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                        *mut sqlite3_context,
                                                                                    arg2:
                                                                                        ::std::os::raw::c_int,
                                                                                    arg3:
                                                                                        *mut *mut sqlite3_value)>,
                                     xStep:
                                         ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                        *mut sqlite3_context,
                                                                                    arg2:
                                                                                        ::std::os::raw::c_int,
                                                                                    arg3:
                                                                                        *mut *mut sqlite3_value)>,
                                     xFinal:
                                         ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                        *mut sqlite3_context)>)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_create_function_v2(db: *mut sqlite3,
                                      zFunctionName:
                                          *const ::std::os::raw::c_char,
                                      nArg: ::std::os::raw::c_int,
                                      eTextRep: ::std::os::raw::c_int,
                                      pApp: *mut ::std::os::raw::c_void,
                                      xFunc:
                                          ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                         *mut sqlite3_context,
                                                                                     arg2:
                                                                                         ::std::os::raw::c_int,
                                                                                     arg3:
                                                                                         *mut *mut sqlite3_value)>,
                                      xStep:
                                          ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                         *mut sqlite3_context,
                                                                                     arg2:
                                                                                         ::std::os::raw::c_int,
                                                                                     arg3:
                                                                                         *mut *mut sqlite3_value)>,
                                      xFinal:
                                          ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                         *mut sqlite3_context)>,
                                      xDestroy:
                                          ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                         *mut ::std::os::raw::c_void)>)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_aggregate_count(arg1: *mut sqlite3_context)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_expired(arg1: *mut sqlite3_stmt) -> ::std::os::raw::c_int;
    pub fn sqlite3_transfer_bindings(arg1: *mut sqlite3_stmt,
                                     arg2: *mut sqlite3_stmt)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_global_recover() -> ::std::os::raw::c_int;
    pub fn sqlite3_thread_cleanup();
    pub fn sqlite3_memory_alarm(arg1:
                                    ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                   *mut ::std::os::raw::c_void,
                                                                               arg2:
                                                                                   sqlite3_int64,
                                                                               arg3:
                                                                                   ::std::os::raw::c_int)>,
                                arg2: *mut ::std::os::raw::c_void,
                                arg3: sqlite3_int64) -> ::std::os::raw::c_int;
    pub fn sqlite3_value_blob(arg1: *mut sqlite3_value)
     -> *const ::std::os::raw::c_void;
    pub fn sqlite3_value_bytes(arg1: *mut sqlite3_value)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_value_bytes16(arg1: *mut sqlite3_value)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_value_double(arg1: *mut sqlite3_value) -> f64;
    pub fn sqlite3_value_int(arg1: *mut sqlite3_value)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_value_int64(arg1: *mut sqlite3_value) -> sqlite3_int64;
    pub fn sqlite3_value_text(arg1: *mut sqlite3_value)
     -> *const ::std::os::raw::c_uchar;
    pub fn sqlite3_value_text16(arg1: *mut sqlite3_value)
     -> *const ::std::os::raw::c_void;
    pub fn sqlite3_value_text16le(arg1: *mut sqlite3_value)
     -> *const ::std::os::raw::c_void;
    pub fn sqlite3_value_text16be(arg1: *mut sqlite3_value)
     -> *const ::std::os::raw::c_void;
    pub fn sqlite3_value_type(arg1: *mut sqlite3_value)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_value_numeric_type(arg1: *mut sqlite3_value)
     -> ::std::os::raw::c_int;
    pub fn sqlite3_value_subtype(arg1: *mut sqlite3_value)
     -> ::std::os::raw::c_uint;
    pub fn sqlite3_value_dup(arg1: *const sqlite3_value)
     -> *mut sqlite3_value;
    pub fn sqlite3_value_free(arg1: *mut sqlite3_value);
    pub fn sqlite3_aggregate_context(arg1: *mut sqlite3_context,
                                     nBytes: ::std::os::raw::c_int)
     -> *mut ::std::os::raw::c_void;
    pub fn sqlite3_user_data(arg1: *mut sqlite3_context)
     -> *mut ::std::os::raw::c_void;
    pub fn sqlite3_context_db_handle(arg1: *mut sqlite3_context)
     -> *mut sqlite3;
    pub fn sqlite3_get_auxdata(arg1: *mut sqlite3_context,
                               N: ::std::os::raw::c_int)
     -> *mut ::std::os::raw::c_void;
    pub fn sqlite3_set_auxdata(arg1: *mut sqlite3_context,
                               N: ::std::os::raw::c_int,
                               arg2: *mut ::std::os::raw::c_void,
                               arg3:
                                   ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                  *mut ::std::os::raw::c_void)>);
    pub fn sqlite3_result_blob(arg1: *mut sqlite3_context,
                               arg2: *const ::std::os::raw::c_void,
                               arg3: ::std::os::raw::c_int,
                               arg4:
                                   ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                  *mut ::std::os::raw::c_void)>);
    pub fn sqlite3_result_blob64(arg1: *mut sqlite3_context,
                                 arg2: *const ::std::os::raw::c_void,
                                 arg3: sqlite3_uint64,
                                 arg4:
                                     ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                    *mut ::std::os::raw::c_void)>);
    pub fn sqlite3_result_double(arg1: *mut sqlite3_context, arg2: f64);
    pub fn sqlite3_result_error(arg1: *mut sqlite3_context,
                                arg2: *const ::std::os::raw::c_char,
                                arg3: ::std::os::raw::c_int);
    pub fn sqlite3_result_error16(arg1: *mut sqlite3_context,
                                  arg2: *const ::std::os::raw::c_void,
                                  arg3: ::std::os::raw::c_int);
    pub fn sqlite3_result_error_toobig(arg1: *mut sqlite3_context);
    pub fn sqlite3_result_error_nomem(arg1: *mut sqlite3_context);
    pub fn sqlite3_result_error_code(arg1: *mut sqlite3_context,
                                     arg2: ::std::os::raw::c_int);
    pub fn sqlite3_result_int(arg1: *mut sqlite3_context,
                              arg2: ::std::os::raw::c_int);
    pub fn sqlite3_result_int64(arg1: *mut sqlite3_context,
                                arg2: sqlite3_int64);
    pub fn sqlite3_result_null(arg1: *mut sqlite3_context);
    pub fn sqlite3_result_text(arg1: *mut sqlite3_context,
                               arg2: *const ::std::os::raw::c_char,
                               arg3: ::std::os::raw::c_int,
                               arg4:
                                   ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                  *mut ::std::os::raw::c_void)>);
    pub fn sqlite3_result_text64(arg1: *mut sqlite3_context,
                                 arg2: *const ::std::os::raw::c_char,
                                 arg3: sqlite3_uint64,
                                 arg4:
                                     ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                    *mut ::std::os::raw::c_void)>,
                                 encoding: ::std::os::raw::c_uchar);
    pub fn sqlite3_result_text16(arg1: *mut sqlite3_context,
                                 arg2: *const ::std::os::raw::c_void,
                                 arg3: ::std::os::raw::c_int,
                                 arg4:
                                     ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                    *mut ::std::os::raw::c_void)>);
    pub fn sqlite3_result_text16le(arg1: *mut sqlite3_context,
                                   arg2: *const ::std::os::raw::c_void,
                                   arg3: ::std::os::raw::c_int,
                                   arg4:
                                       ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                      *mut ::std::os::raw::c_void)>);
    pub fn sqlite3_result_text16be(arg1: *mut sqlite3_context,
                                   arg2: *const ::std::os::raw::c_void,
                                   arg3: ::std::os::raw::c_int,
                                   arg4:
                                       ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                      *mut ::std::os::raw::c_void)>);
    pub fn sqlite3_result_value(arg1: *mut sqlite3_context,
                                arg2: *mut sqlite3_value);
    pub fn sqlite3_result_zeroblob(arg1: *mut sqlite3_context,
                                   n: ::std::os::raw::c_int);
